Completes: ui layout

--- a/Pratice-As/index.html
+++ b/Pratice-As/index.html
@@ -19,6 +19,439 @@
 
 <body>
 
+
+  <!-- Header And Hero Section -->
+  <header id="header_area">
+
+
+    <nav class="bg-bgPrimary border-b border-bgSecondary">
+      <div class="containers mx-auto  text-white flex items-center
+         justify-between py-6 px-2">
+
+        <!-- Logo -->
+        <div>
+          <h2 class="text-2xl text-white font-bold">Tech<span class="bgGradientText">Wave</span></h2>
+        </div>
+
+        <!-- Navigation Menu -->
+        <ul class="gap-8 hidden sm:flex">
+          <li><a href="#" class="font-medium opacitys">About</a></li>
+          <li><a href="#" class="font-medium opacitys">Episodes</a></li>
+          <li><a href="#" class="font-medium opacitys">Host</a></li>
+        </ul>
+
+        <!-- Btn Subscribe -->
+        <div class="hidden items-center gap-1 py-3 px-4 bgGradient rounded-full text-md font-semibold sm:flex">
+          <a href="#">Subscribe</a>
+          <img src="images/assets/right-arow.png" alt="icons">
+        </div>
+
+        <!-- bars Mobile  -->
+        <div class="sm:hidden">
+          <img src="images/assets/hamburger-menu.png" alt="icon" class="text-2xl">
+        </div>
+
+      </div>
+    </nav>
+
+    <!-- Hero Header area -->
+    <section id="hero_area" class="">
+      <div class="containers mx-auto py-24 text-center flex flex-col items-center justify-center text-white">
+
+        <!-- Hero Content -->
+        <div class="mx-auto flex flex-col gap-6 items-center justify-center">
+
+          <!-- images and Icons -->
+          <div id="bgimages" class="relative">
+            <img src="./images/assets/microphone.png" alt="" class="imagesCustomWidth">
+            <div class="absolute top-0 right-0 sm:top-4 sm:right-4 ">
+              <span class="bg-headingExtra text-[#1A0B2E] py-2 px-4 rounded-full shadow-sm
+                  shadow-headingExtra">NEW</span>
+            </div>
+          </div>
+
+          <!-- Hero Details -->
+          <div class="flex flex-col gap-5">
+
+            <!-- Title -->
+            <div class="flex flex-col gap-2">
+              <h1 class="text-4xl font-extrabold ">TechWave</h1>
+              <p class="opacitys">Your daily dose of tech insights, productivity hacks ,<br> and personal growth</p>
+            </div>
+
+            <!-- 2 buttons -->
+            <div class="flex items-center gap-2 justify-center">
+              <div class="flex items-center gap-2 py-3 px-5 bgGradient rounded-full">
+                <img src="./images/assets/spotify.png" alt="icons">
+                <p>Listen on Spotify</p>
+              </div>
+              <div class="flex items-center gap-2 py-3 px-5 borders rounded-full">
+                <img src="./images/assets/message.png" alt="icons">
+                <p class="text-headingExtra">Subscribe</p>
+              </div>
+
+            </div>
+
+          </div>
+
+        </div>
+
+      </div>
+    </section>
+
+  </header>
+
+
+  <!-- Main Section -->
+  <main>
+
+
+    <!-- About Section  -->
+    <section id="" class="bg-bgPrimary">
+      <div class="containers mx-auto py-10 px-2">
+
+        <!-- left About Contents -->
+        <div class="flex flex-col gap-4 text-white text-center pb-10 border-b
+                   border-gray-700">
+          <h2 class="text-4xl text-white font-bold">About the Podcast</h2>
+          <p>TechWave is your go-to podcast for staying ahead in the fast-paced world of technology. <br
+              class="hidden 2xl:block"> We break down
+            complex topics
+            into digestible insights, explore productivity strategies that actually work, <br class="hidden 2xl:block">
+            and share stories of personal
+            growth from
+            industry leaders.
+          </p>
+          <p>Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</p>
+        </div>
+
+        <!-- Right About Contents -->
+        <div class="py-10 text-white flex items-center justify-evenly flex-wrap gap-10 text-center">
+
+          <!-- item 1 -->
+          <div class="flex flex-col gap-4">
+            <h2 class="text-4xl font-bold text-headingExtra">150K+</h2>
+            <p>Monthly Listeners</p>
+          </div>
+          <!-- item 2 -->
+          <div class="flex flex-col gap-4">
+            <h2 class="text-4xl font-bold text-headingExtra">200+</h2>
+            <p>Episodes Published</p>
+          </div>
+          <!-- item 3 -->
+          <div class="flex flex-col gap-4">
+            <h2 class="text-4xl font-bold text-headingExtra">4.9★</h2>
+            <p>Average Rating</p>
+          </div>
+          <!-- item 4 -->
+          <div class="flex flex-col gap-4">
+            <h2 class="text-4xl font-bold text-headingExtra">50+</h2>
+            <p>Industry Experts</p>
+          </div>
+
+        </div>
+
+
+      </div>
+    </section>
+
+
+    <!-- Why Choose TechWave section -->
+    <Section id="" class="bg-bgSecondary py-10">
+      <div class="containers mx-auto text-white flex flex-col gap-8">
+
+
+        <!-- Title -->
+        <div class="text-center">
+          <h2 class="text-3xl font-bold">Why Choose TechWave</h2>
+        </div>
+
+
+        <!-- Cards Choose Section -->
+        <div class="px-4 grid gap-4 justify-center  sm:grid-cols-3 sm:grid-rows-2">
+
+
+          <!-- items 1 -->
+          <div class="bg-[#351165]/40 p-10 rounded-2xl flex flex-col gap-4 sm:row-span-2">
+
+            <div>
+              <img src="images/assets/headphone.png" alt="img">
+            </div>
+
+            <!-- Details -->
+            <div class="flex flex-col justify-center gap-4">
+              <h2 class="">Premium Audio Quality</h2>
+              <p class="opacitys">Experience crystal-clear sound with professional-grade recording equipment and expert
+                audio
+                engineering. Every episode
+                is mastered for optimal listening across all devices and platforms.</p>
+            </div>
+          </div>
+          <!-- items 2 -->
+          <div class="bg-[#351165]/40 p-10 rounded-2xl flex flex-col gap-4 sm:col-span-2">
+
+            <div>
+              <img src="images/assets/device.png" alt="img">
+            </div>
+
+            <!-- Details -->
+            <div class="flex flex-col gap-4">
+              <h2 class="">Mobile Friendly</h2>
+              <p class="opacitys">Listen on the go with seamless mobile experience and offline downloads.</p>
+            </div>
+          </div>
+          <!-- items 3 -->
+          <div class="bg-[#351165]/40 p-10 rounded-2xl flex flex-col gap-4 sm:col-span-2">
+
+            <div>
+              <img src="images/assets/location.png" alt="img">
+            </div>
+
+            <!-- Details -->
+            <div class="flex flex-col gap-4">
+              <h2 class="">Global Community</h2>
+              <p class="opacitys">Connect with tech enthusiasts from over 120 countries worldwide.</p>
+            </div>
+          </div>
+          <!-- items 4 -->
+          <div class="bg-[#351165]/40 p-10 rounded-2xl flex flex-col gap-4 sm:col-span-2">
+
+            <div>
+              <img src="images/assets/Icon (Stroke).png" alt="img">
+            </div>
+
+            <!-- Details -->
+            <div class="flex flex-col gap-4">
+              <h2 class="">Exclusive Interviews</h2>
+              <p class="opacitys">Get unprecedented access to industry titans, startup founders, and tech visionaries.
+                Our host secures exclusive
+                conversations you won't find anywhere else, diving deep into their journeys, failures, and success
+                strategies.</p>
+            </div>
+          </div>
+          <!-- items 5 -->
+          <div class="bg-[#351165]/40 p-10 rounded-2xl flex flex-col gap-4">
+
+            <div>
+              <img src="images/assets/headphone.png" alt="img">
+            </div>
+
+            <!-- Details -->
+            <div class="flex flex-col gap-4">
+              <h2 class="">Rich Resources</h2>
+              <p class="opacitys">Access show notes, transcripts, and additional learning materials for every episode.
+              </p>
+            </div>
+          </div>
+
+        </div>
+
+
+
+
+
+      </div>
+    </Section>
+
+
+    <!-- Featured Episodes Section -->
+    <Section id="" class="bg-bgPrimary py-31 px-3">
+      <div class="containers mx-auto text-white flex flex-col gap-10">
+
+        <!-- Title -->
+        <div class="text-center">
+          <h2 class="text-3xl font-bold">Featured Episodes</h2>
+        </div>
+
+        <!-- cards Featured  -->
+
+        <div class="grid gap-4 grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 lg:items-center lg:justify-center">
+
+          <!-- items 1 -->
+          <div class="bg-[#351165]/40 flex flex-col rounded-3xl shadow-2xl
+             hover:-translate-y-1 hover:transition duration-300 2xl:mx-auto">
+
+            <!-- Video Play Youtube -->
+            <div class="w-full aspect-video rounded-t-3xl overflow-hidden">
+              <iframe class="w-full h-full" src="https://www.youtube.com/embed/4tFjBYKq89A" frameborder="0"
+                allow="autoplay; encrypted-media" allowfullscreen>
+              </iframe>
+            </div>
+
+            <!-- Details -->
+            <div class="p-4 flex flex-col gap-2">
+              <h2 class="font-bold text-lg">Featured Episodes</h2>
+              <p>Exploring how artificial intelligence is transforming our daily routines and what to expect in the next
+                decade.</p>
+              <!-- time -->
+              <div class=" flex items-center gap-2 text-headingExtra">
+                <img src="./images/assets/clock.png" alt=" icons">
+                <span class="font-semibold">42 min</span>
+              </div>
+            </div>
+
+          </div>
+
+          <!-- items 2 -->
+          <div class="bg-[#351165]/40 flex flex-col rounded-3xl shadow-2xl
+             hover:-translate-y-1 hover:transition duration-300 2xl:mx-auto">
+
+            <!-- Video Play Youtube -->
+            <div class="w-full aspect-video rounded-t-3xl overflow-hidden">
+              <iframe class="w-full h-full" src="https://www.youtube.com/embed/DU9D3CVtZxg" frameborder="0"
+                allow="autoplay; encrypted-media" allowfullscreen>
+              </iframe>
+            </div>
+
+            <!-- Details -->
+            <div class="p-4 flex flex-col gap-2">
+              <h2 class="font-bold text-lg">Building Better Habits for Remote Work</h2>
+              <p>Practical strategies for staying productive and maintaining work-life balance in a...</p>
+              <!-- time -->
+              <div class=" flex items-center gap-2 text-headingExtra">
+                <img src="./images/assets/clock.png" alt=" icons">
+                <span class="font-semibold">35 min</span>
+              </div>
+            </div>
+
+          </div>
+
+          <!-- items 3 -->
+          <div class="bg-[#351165]/40 flex flex-col rounded-3xl shadow-2xl
+             hover:-translate-y-1 hover:transition duration-300 2xl:mx-auto">
+
+            <!-- Video Play Youtube -->
+            <div class="w-full aspect-video rounded-t-3xl overflow-hidden">
+              <iframe class="w-full h-full" src="https://www.youtube.com/embed/EpqporKxU84" frameborder="0"
+                allow="autoplay; encrypted-media" allowfullscreen>
+              </iframe>
+            </div>
+            <!-- Details -->
+            <div class="p-4 flex flex-col gap-2">
+              <h2 class="font-bold text-lg">Career Growth in Tech: A Roadmap</h2>
+              <p>Expert advice on navigating your tech career from junior developer to senior leadership...</p>
+              <!-- time -->
+              <div class=" flex items-center gap-2 text-headingExtra">
+                <img src="./images/assets/clock.png" alt=" icons">
+                <span class="font-semibold">51 min</span>
+              </div>
+            </div>
+
+          </div>
+
+        </div>
+
+
+      </div>
+    </Section>
+
+
+
+    <!-- Meet the Host Section -->
+    <Section id="" class="bg-bgPrimary pt-15 pb-10">
+      <div class="containers mx-auto flex flex-col gap-10 px-3 max-w-max">
+
+
+        <!-- Title -->
+        <div class="text-center">
+          <h2 class="text-3xl font-bold text-white">Featured Episodes</h2>
+        </div>
+
+        <div class="bg-[#351165]/40 flex flex-col items-center text-center rounded-2xl p-5 gap-4
+           sm:flex-row sm:text-left sm:justify-center lg:justify-around 2xl:max-w-max">
+
+          <!-- left Images Meet  -->
+          <div
+            class="sm:basis-[30%] lg:flex lg:items-center lg:justify-center 2xl:flex 2xl:items-start 2xl:justify-end">
+            <img src="images/assets/host.png" alt="images">
+          </div>
+
+          <!-- Right Content  -->
+          <div class="sm:basis-[70%] text-white px-3 flex flex-col gap-4">
+            <h2 class="text-white text-2xl font-bold">Alex Kumar</h2>
+            <p class="opacitys">Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech
+              industry for over
+              10 years,
+              working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry
+              leaders and
+              practical advice for anyone looking to grow in tech.</p>
+
+            <!-- icons -->
+            <div class="flex items-center justify-center gap-2 sm:justify-start">
+              <div class="w-10 h-10 rounded-full border border-[#533C72] flex items-center justify-center">
+                <img src="images/assets/linkedin.png" alt="icons">
+              </div>
+              <div class="w-10 h-10 rounded-full border border-[#533C72] flex items-center justify-center">
+                <img src="images/assets/x.png" alt="icons">
+              </div>
+              <div class="w-10 h-10 rounded-full border border-[#533C72] flex items-center justify-center">
+                <img src="images/assets/instagram.png" alt="icons">
+              </div>
+              <div class="w-10 h-10 rounded-full border border-[#533C72] flex items-center justify-center">
+                <img src="images/assets/youtube.png" alt="icons">
+              </div>
+
+            </div>
+
+          </div>
+        </div>
+
+
+      </div>
+    </Section>
+
+  </main>
+
+
+  <!-- Footer Area  -->
+  <footer id="footer_area" class="bg-bgPrimary">
+    <div class="containers mx-auto py-28 text-white flex flex-col items-center justify-center gap-8">
+
+
+      <!-- Footer Contents -->
+      <div class="flex flex-col items-center justify-center gap-8">
+        <div>
+          <h2 class="text-2xl sm:text-4xl text-white font-bold">Tech<span
+              class="bg-[linear-gradient(135deg,#F7E93F_0%,#FB09B4_51%,#9100F8_100%)] bg-clip-text text-transparent">Wave</span>
+          </h2>
+        </div>
+        <!-- icons and text -->
+        <div class="flex gap-4 flex-wrap justify-center items-center sm:flex-nowrap sm:gap-8">
+
+          <!-- icons 1 + text -->
+          <div class="flex gap-2 items-center">
+            <img src="./images/assets/spotify.png" alt="icons">
+            <p>Spotify</p>
+          </div>
+          <!-- icons 2 + text -->
+          <div class="flex gap-2 items-center max-w-max">
+            <img src="./images/assets/apple-podcast.png " alt="icons">
+            <p>Apple Podcasts</p>
+          </div>
+          <!-- icons 3 + text -->
+          <div class="flex gap-2 items-center">
+            <img src="./images/assets/youtube-podcast.png" alt="icons">
+            <p>YouTube</p>
+          </div>
+          <!-- icons 4 + text -->
+          <div class="flex gap-2 items-center">
+            <img src="./images/assets/twitter.png" alt="icons">
+            <p>Twitter</p>
+          </div>
+
+        </div>
+      </div>
+
+
+      <div>
+        <small class="opacitys">© 2026 TechWave Podcast. All rights reserved.</small>
+      </div>
+
+
+    </div>
+  </footer>
+
+
 </body>
 
 </html>
