Completes: 3 button programs

--- a/Pratice-As/index.html
+++ b/Pratice-As/index.html
@@ -106,11 +106,11 @@
 
           <!-- buttons 3 -->
           <div>
-            <button onclick="toggleStyle('allAvailableJobButton')" id="allAvailableJobButton"
+            <button onclick="switchTab('allAvailableJobButton')" id="allAvailableJobButton"
               class="btn bg-primaryColor text-white">All</button>
-            <button onclick="toggleStyle('interviewAvailableButton')" id="interviewAvailableButton"
+            <button onclick="switchTab('interviewAvailableButton')" id="interviewAvailableButton"
               class="btn text-grayColor">Interview</button>
-            <button onclick="toggleStyle('rejectedAvailableJobs')" id="rejectedAvailableJobs"
+            <button onclick="switchTab('rejectedAvailableJobs')" id="rejectedAvailableJobs"
               class="btn text-grayColor">Rejected</button>
           </div>
 
